src/objects/Natterbox_Call_Reporting_Object__c.object
<CustomObject>
    <fields>
        <fullName>UUID__c</fullName>
        <description>The unique identifier for the call.</description>
        <inlineHelpText>This is the unique identifier for the call supplied by Natterbox. This can be used to identify the corresponding call data on the Natterbox system.</inlineHelpText>
        <label>UUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Merchant_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not currently used.</inlineHelpText>
        <label>Unique Merchant Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wrapup_String_1__c</fullName>
        <inlineHelpText>The first Wrapup String entered by the user on the Natterbox CTI.</inlineHelpText>
        <label>Wrapup String 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wrapup_String_2__c</fullName>
        <inlineHelpText>The second Wrapup String entered by the user on the Natterbox CTI.</inlineHelpText>
        <label>Wrapup String 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wrapup_Time__c</fullName>
        <description>If the agent was using the Natterbox CTI, this is the amount of time between the call being completed and the agent pressing the &apos;Done&apos; button on the CTI. If the agent is not making use of the CTI, this field will be left blank.</description>
        <inlineHelpText>If the agent was using the Natterbox CTI, this is the amount of time between the call being completed and the agent pressing the &apos;Done&apos; button on the CTI. If the agent is not making use of the CTI, this field will be left blank.</inlineHelpText>
        <label>Wrapup Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Natterbox Call Reporting Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Call_Start_Date_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>testing123</fullName>
        <columns>NAME</columns>
        <columns>CTI_Activity_Created__c</columns>
        <columns>CallStartDate__c</columns>
        <columns>UUID__c</columns>
        <columns>Owner__c</columns>
        <columns>Account__c</columns>
        <columns>RelatedContact__c</columns>
        <columns>Case__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Other_ID__c</columns>
        <columns>Wrapup_String_1__c</columns>
        <columns>Wrapup_String_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>testing123</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Customer Service Calls Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Natterbox Call Reporting Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>